--- a/dfa_create.html
+++ b/dfa_create.html
@@ -533,9 +533,9 @@
         textPos = getQuadraticBezierPoint(start, controlPoint, end, 0.5);
 
         // Text rotation
-        const tangentX = 2 * (0.5 * (controlPoint.x - start.x) + 0.5 * (end.x - controlPoint.x));
-        const tangentY = 2 * (0.5 * (controlPoint.y - start.y) + 0.5 * (end.y - controlPoint.y));
-        textAngle = Math.atan2(- tangentY, - tangentX);
+        const tangentX = ((controlPoint.x - start.x) + (end.x - controlPoint.x));
+        const tangentY = ((controlPoint.y - start.y) + (end.y - controlPoint.y));
+        textAngle = Math.atan2(tangentY, tangentX) / 2;
 
       } else {
         // Straight link
